# ore-burn

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: authority.rs  config.rs  creator.rs  mod.rs  promoter.rs
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
program/src/: burn.rs  bury.rs  claim.rs  collect.rs  initialize.rs  lib.rs  open.rs  update_score.rs
