[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
repository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
ore-api = "3.6.0-beta"
ore-boost-api = "4.0.0-beta"
ore-burn-api = { path = "./api", version = "0.1.0" }
bytemuck = "1.14"
num_enum = "0.7"
solana-program = "=2.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
steel = "4.0"
thiserror = "1.0"
